--- a/css/site.css
+++ b/css/site.css
@@ -186,8 +186,8 @@ p a:hover {
 	font-size: 0;
     line-height: 0;
     padding: 0;
-    -webkit-transition-delay: 2s; /* Safari */
-    transition-delay: 2s;
+    -webkit-transition-delay: 1s; /* Safari */
+    transition-delay: 1s;
   
     color: transparent;
     border: none;
@@ -204,8 +204,8 @@ p a:hover {
 	-webkit-transition: all 3s ease;
 	-o-transition: all 3s ease;
 	transition: all 3s ease;
-	-webkit-transition-delay: 2s; /* Safari */
-    transition-delay: 2s;
+	-webkit-transition-delay: 1s; /* Safari */
+    transition-delay: 1s;
 	position: absolute;
 	left:50%;
 	margin-left:7px;
@@ -265,6 +265,20 @@ p a:hover {
 		color:#808080;
 		
 	}
+	#arrow-left, #arrow-right
+    {
+        width: 19.5px;
+        height: 22px;
+    }
+    #arrow-left.active 
+    {
+        left: -2.5%;
+    }   
+    #arrow-right.active 
+    {
+        right: -2.5%;
+    }
+   
 
 }
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -302,6 +316,19 @@ p a:hover {
 		width: 90%;
 	    margin: 0px 5% 20px 5%;
 	}
+	#arrow-left, #arrow-right
+    {
+        width: 19.5px;
+        height: 22px;
+    }
+    #arrow-left.active 
+    {
+        left: -2.5%;
+    }   
+    #arrow-right.active 
+    {
+        right: -2.5%;
+    }
 
 }
 
