--- a/css/site.css
+++ b/css/site.css
@@ -27,12 +27,12 @@ body {
 }
 .navbar-brand{
 	float: none;
-	margin: 30px 0 0 -33px;
+	margin: 39px 0 0 -25px;
 	display: block;
 	position: absolute;
 	left:50%;
-	width: 66px;
-	height: 66px;
+	width: 50px;
+	height: 50px;
 	padding: 0;
 	/* Firefox */
 	-moz-transition: all 1s ease;
@@ -76,6 +76,7 @@ body {
 .navbar-default {
 	border: 0;
 	background:#fff;
+	max-height: 110px; 
 }
 .navbar-nav > li {
 	float: none;
@@ -173,8 +174,8 @@ p a:hover {
 	background: url(../images/arrow-next.png);
     background-size: cover;
     display: block;
-    width: 39px;
-    height: 44px;
+    width: 29.5px;
+    height: 33.33px;
 	-moz-transition: all 3s ease;
 	-webkit-transition: all 3s ease;
 	-o-transition: all 3s ease;
@@ -182,7 +183,7 @@ p a:hover {
 	position: absolute;
 	right:50%;
 	margin-right:-7px;
-	top:50%;
+	top:51%;
 	font-size: 0;
     line-height: 0;
     padding: 0;
@@ -198,8 +199,8 @@ p a:hover {
 	background: url(../images/arrow-prev.png);
     background-size: cover;
     display: block;
-    width: 39px;
-    height: 44px;
+    width: 29.5px;
+    height: 33.33px;
 	-moz-transition: all 3s ease;
 	-webkit-transition: all 3s ease;
 	-o-transition: all 3s ease;
@@ -209,7 +210,7 @@ p a:hover {
 	position: absolute;
 	left:50%;
 	margin-left:7px;
-	top:50%;
+	top:51%;
 	font-size: 0;
     line-height: 0;
     padding: 0;
@@ -344,7 +345,7 @@ p a:hover {
 	    border-top: 33px solid #e5e5e5;
 	}
 	.navbar-brand {
-		margin-top: 10px;
+		margin-top: 20px;
 	}
 	.navbar-nav {
 		float: none;
