smaller password field
Signed-off-by: Susan Berry <sberry@clickherelabs.com>

--- a/css/password.css
+++ b/css/password.css
@@ -41,12 +41,12 @@ body {
 
 form {
 	position: absolute;
-	top:50%;
+	top:45%;
 	left:50%;
-	margin: 0px 0 0 -190px;
+	margin: 0px 0 0 -143px;
 }
-form .pass {width:200px;padding:10px 18px;border: 0;}
-form .btn {color:#fff;background: #000;border-radius: 0;text-transform: uppercase;outline: 0;padding:11px 18px;border: 0;}
+form .pass {width:160px;padding:8px 15px;border: 0;}
+form .btn {color:#fff;background: #000;border-radius: 0;text-transform: uppercase;outline: 0;padding:9px 15px;border: 0;}
 form .btn:hover{color:#dddddd;}
-form .pass, form .btn {font-size: 15px;letter-spacing: 3px;margin:10px;}
+form .pass, form .btn {font-size: 12px;letter-spacing: 2.5px;margin:10px 7px;}
 form .pass:focus, form .btn:focus {outline: 0;}
